[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/LD51.png" type="Texture" id=2]
[ext_resource path="res://sounds/shot_enemy.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/chirp.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/small_chirp.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 20.025

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 290
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 56, 0, 40, 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Left" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 16, 8, 8 )

[node name="Right" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 16, 8, 8 )

[node name="IdleTimer" type="Timer" parent="."]

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -4.5

[node name="Chirp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Tween" type="Tween" parent="."]

[node name="SmallChirp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="finished" from="Chirp" to="." method="_on_Chirp_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
